# RadVLM

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.deepseek.txt
baselines/: pyproject.deepseek.toml  requirements.deepseek.txt  requirements.qwen.txt
data/processed/: wikidata
data/raw/: MIMIC-CXR  MIMIC-CXR-JPG  widipedia  wikidata  wikidata5m
models/deepseek-vl2-finetuned/: README.md  adapter_config.json  adapter_model.safetensors
notebooks/: eda_llm_deepseek-r1.ipynb
scripts/: README.md  train.sh  train_deepseek.sh
src/radvlm/: build_dataset.py  train_deepseek_lm.py
src/radvlm/data/: __init__.py  build_dataset.py  datasets.py
src/radvlm/models/: deepseek-vl2.py  models.py  qwen25-vl.py
src/radvlm/utils/: utils.py
tests/: test_deepseek_vl2.py  test_qwen2.5_vl.py
